docs/execution-plan/evidence/2026-02-19/milestone-M1/M1-T04-repl-spawn-error-context-test.txt
safe_run: heavy command admitted (available=3804MiB, threshold=3072MiB)
   Compiling rlm-core v0.1.0 (/Users/rand/src/loop/rlm-core)
warning: unused import: `std::path::PathBuf`
   --> src/dp_integration/review.rs:560:9
    |
560 |     use std::path::PathBuf;
    |         ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` on by default

warning: unused import: `super::*`
   --> src/module/compose.rs:305:9
    |
305 |     use super::*;
    |         ^^^^^^^^

warning: unused import: `LinkSource`
    --> src/sync/drift.rs:1063:40
     |
1063 |     use crate::topos::{Link, LinkType, LinkSource, LeanRef, ToposRef};
     |                                        ^^^^^^^^^^

warning: unused imports: `LeanRef`, `LinkSource`, `LinkType`, and `Link`
   --> src/sync/engine.rs:609:24
    |
609 |     use crate::topos::{Link, LinkType, LinkSource, LeanRef, ToposRef};
    |                        ^^^^  ^^^^^^^^  ^^^^^^^^^^  ^^^^^^^

error[E0277]: `repl::ReplHandle` doesn't implement `Debug`
   --> src/repl.rs:584:45
    |
584 |         let err = ReplHandle::spawn(config).expect_err(
    |                                             ^^^^^^^^^^ the trait `Debug` is not implemented for `repl::ReplHandle`
    |
    = note: add `#[derive(Debug)]` to `repl::ReplHandle` or manually `impl Debug for repl::ReplHandle`
note: required by a bound in `std::result::Result::<T, E>::expect_err`
   --> /rustc/29483883eed69d5fb4db01964cdf2af4d86e9cb2/library/core/src/result.rs:1225:5
help: consider annotating `repl::ReplHandle` with `#[derive(Debug)]`
    |
135 + #[derive(Debug)]
136 | pub struct ReplHandle {
    |

warning: unused variable: `action_id`
   --> src/reasoning/store.rs:741:14
    |
741 |         let (action_id, outcome_id) = trace.log_action(&chosen, "Action", "Outcome");
    |              ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_action_id`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `questions`
   --> src/spec_agent/agent.rs:605:13
    |
605 |         let questions = agent.refine(&mut ctx, &[]).await.unwrap();
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_questions`

For more information about this error, try `rustc --explain E0277`.
warning: `rlm-core` (lib test) generated 6 warnings
error: could not compile `rlm-core` (lib test) due to 1 previous error; 6 warnings emitted
